apps/base/oauth2-proxy/oauth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    targetPort: 4180
  selector:
    app: oauth2-proxy
  type: ClusterIP
