apps/base/oauth2-proxy/oauth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: octave-dev.topcon.app
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
  tls:
  - hosts:
    - octave-dev.topcon.app
    secretName: octave-topconapp-tls
